# Caravan

./: CMakeLists.txt  Caravan plan.odt  Caravan.sln
Caravan/: CMakeLists.txt  Caravan.vcxproj  Caravan.vcxproj.filters  game.cpp  game.h  main.cpp  table.cpp  table.h
Caravan/game_objects/: caravan.cpp  caravan.h  card.cpp  card.h  card_stack.cpp  card_stack.h  game_object.cpp  game_object.h  player.cpp  player.h  slot.cpp  slot.h
Caravan/shaders/: sprite.frag  sprite.vert
Caravan/utilities/: mouse_picker.cpp  mouse_picker.h  resource_manager.cpp  resource_manager.h  shader.h  sprite_renderer.cpp  sprite_renderer.h
